@@ -1,5 +1,6 @@
 rxvt-unicode changelog <= google-friendly title
 
+TODO: nuke menubar.C and strings.C
 TODO: move pty/tty handling into a fork'ed server and drop all privs
 TODO: harmonize --disable-options into position-dependent options.
 TODO: after requesting the selection and getting a timeout, no further requests will be sent.
@@ -7,6 +8,7 @@ TODO: "slow" rendering mode for bidi and scripts
 TODO: read property sequence is broken with respect to utf-8 etc.
 TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
 TODO: clarify and get rid of SMOOTH_REFRESH etc.
+WISH: perl extension for background image loading and moving the origin.
 WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
 WISH: just for fun, do shade and tint with XRender.
 WISH: support tex fonts
